--- a/public/index.html
+++ b/public/index.html
@@ -26,6 +26,45 @@
       You need to enable JavaScript to run this app.
     </noscript>
     <div id="root"></div>
+    <!-- <hr/>
+    <form id ="register" onsubmit="alert('welcome')">
+      <fieldset>
+      <label for="first name"> First Name:</label>
+      <input id = "first name" name = " First Name"  placeholder = "first name" required>
+      <label for ="last name">Last Name:</label>
+      <input id = "last name" name ="last name"  placeholder = "last name" required> <br/>
+      <label for="email">email:</label>
+      <input id ="email" name = "email" type = "email" placeholder ="email@email.com" required><br/>
+      <label for="phone">Phone:</label>
+      <input id ="phone" name = "phone" type="tel" placeholder="555-555-5555" required><br/>
+      <label for="age">age:</label>
+      <input id = "age" name = "age" type = "number" placeholder="age" min ="1" required><br/>
+      <label for="password">password:</label>
+      <input id = "password" name = "password" type = "password" placeholder="enter password" required><br/>
+      <label for="password confirmation">Confirm password:</label>
+      <input id = "password conformation" name = "password confirmation" type = "password" placeholder="confirm password" required>
+      <button type = "submit">register</button>
+    </fieldset>
+    </form> -->
+    <hr/>
+  <!-- <form id="login" onsubmit="alert('logged in')">
+    <fieldset>
+    <label for ="login">enter email</label>
+    <input id = "login" name ="login" placeholder ="email@email.com" type ="email" required><br/>
+    <label for ="password">password</label>
+    <input id = "password" name = "password" placeholder="enter password" type = "password" required>
+    <button type="submit">submit</button>
+  </fieldset>
+  </form> -->
+    <hr/>
+  <!-- <form id="forgot password?" onsubmit="alert('password reset')">
+    <fieldset>
+    <label for="email">forgot password? enter email</label>
+    <input id = "email" name = "email" type = "email" placeholder="enter email" required>
+    <button type = "submit">Submit</button>
+  </fieldset>
+  </form> -->
+
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
